Fixes for #239